@@ -28,9 +28,9 @@
  * ===========================================================================
  */
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
-import java.lang.foreign.SegmentAllocator;
+
 import org.testng.annotations.*;
 import static org.testng.Assert.*;
 
@@ -46,9 +46,8 @@ public class TestStringEncoding {
 
     @Test(dataProvider = "strings")
     public void testStrings(String testString, int expectedByteLength) {
-        try (MemorySession session = MemorySession.openConfined()) {
-            SegmentAllocator allocator = SegmentAllocator.newNativeArena(expectedByteLength, session);
-            MemorySegment text = allocator.allocateUtf8String(testString);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment text = arena.allocateUtf8String(testString);
 
             assertEquals(text.byteSize(), expectedByteLength);
 
